--- a/content/topics/people/k/katie-britt/2024-republican-address/26.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/26.md
@@ -6,4 +6,5 @@ next: >-
 url: /2024-republican-address/26/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
+  - Joe Biden
 ---
