Update for consistency

--- a/content/camera-roll/2008/05/2008-05-04-john-golf.md
+++ b/content/camera-roll/2008/05/2008-05-04-john-golf.md
@@ -1,13 +1,16 @@
 ---
 title: "Code Camp - John throwing a disc golf on the way back"
-date: 2008-05-04
+draft: true
 near:
   - Decaying mushroom and stump
   - Larry throwing a disc golf on the way back
   - Tire in the mud
-picture: content/camera-roll/2008/05/2008-05-04-john-golf/CodeCamp35_JohnGolf.jpg
-thumbnail: content/camera-roll/2008/05/2008-05-04-john-golf/CodeCamp35_JohnGolf-thumbnail.jpg
+picture: >-
+  content/camera-roll/2008/05/2008-05-04-john-golf/CodeCamp35_JohnGolf.jpg
+thumbnail: >-
+  content/camera-roll/2008/05/2008-05-04-john-golf/CodeCamp35_JohnGolf-thumbnail.jpg
 type: picture
+when: 2008-05-04
 tags:
   - photograph
   - John
