--- a/content/topics/people/k/katie-britt/2024-republican-address/60.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/60.md
@@ -3,6 +3,9 @@ title: >-
   "First of all, we see you, we hear you, and we stand with you."
 next: >-
   "I know you’re frustrated. I know you’re probably disgusted by most of what you see going on in Washington. And I’ll be really honest with you – you’re not wrong for feeling that way."
+# Scarlett Johansson:
+related: >-
+  To the American people who are struggling right now, know this: We hear you. We see you. We smell you. We’re inside your kitchen right now looking through your fridge. And what’s that on the top shelf? Migrants.
 url: /2024-republican-address/60/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
