Long Island, New York

--- a/content/topics/people/d/donald-trump/truthsocial.com/112180192938619231.md
+++ b/content/topics/people/d/donald-trump/truthsocial.com/112180192938619231.md
@@ -8,6 +8,8 @@ when: 2024-03-28
 tags:
   - Donald Trump
   - Truth Social
+  - Long Island
+  - New York
   - stochastic terrorism
   - Who shall deliver me from this turbulent priest?
 ---
