--- a/content/topics/politics/united-states-v-trump/docket/3/para/5.md
+++ b/content/topics/politics/united-states-v-trump/docket/3/para/5.md
@@ -1,9 +1,12 @@
 ---
 title: "5. The Mar-a-Lago Club was an active social club, which, between January 2021 and August 2022, hosted events for tens of thousands of members and guests. After **TRUMP**’s presidency, The Mar-a-Lago Club was not an authorized location for the storage, possession, review, display, or discussion of classified documents. Nevertheless, **TRUMP** stored his boxes containing classified documents in various locations at The Mar-a-Lago Club—including in a ballroom, a bathroom and shower, an office space, his bedroom, and a storage room."
 next: "6. On two occasions in 2021, **TRUMP** showed classified documents to others, as follows:"
+related:
+  - Mar-a-Lago (en.wikipedia.org)
 type: snippet
 url: /united-states-v-trump/docket/3/para/5/
 tags:
   - United States v. Trump (9:23-cr-80101)
   - TRUMP
+  - Mar-a-Lago
 ---
