The Bedminster Club

--- a/content/topics/politics/united-states-v-trump/docket/3/para/6-a.md
+++ b/content/topics/politics/united-states-v-trump/docket/3/para/6-a.md
@@ -6,4 +6,6 @@ url: /united-states-v-trump/docket/3/para/6/a/
 tags:
   - United States v. Trump (9:23-cr-80101)
   - TRUMP
+  - Trump National Golf Club
+  - The Bedminster Club
 ---
