--- a/content/topics/politics/united-states-v-trump/docket/3/para/6-b.md
+++ b/content/topics/politics/united-states-v-trump/docket/3/para/6-b.md
@@ -6,4 +6,5 @@ url: /united-states-v-trump/docket/3/para/6/b/
 tags:
   - United States v. Trump (9:23-cr-80101)
   - TRUMP
+  - The Bedminster Club
 ---
