--- a/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
+++ b/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
@@ -9,9 +9,10 @@ thumbnail: >-
 type: picture
 url: /commons.wikimedia.org/wiki/10.12.12TerryPratchettByLuigiNovi1.jpg/
 website: "https://commons.wikimedia.org/wiki/File:10.12.12TerryPratchettByLuigiNovi1.jpg"
-when: 2023-10-12
+when: 2012-10-12
 tags:
   - Terry Pratchett
   - photograph
+  - glasses
 ---
 Novelist Terry Pratchett on Day 2 of the 2012 New York Comic Con, Friday October 12, 2012 at the Jacob K. Javits Convention Center in Manhattan. Photo by Luigi Novi.
