Update for consistency

--- a/content/camera-roll/2017/04/2017-04-08-nein!.md
+++ b/content/camera-roll/2017/04/2017-04-08-nein!.md
@@ -1,9 +1,9 @@
 ---
 title: "nein!"
-date: 2017-04-08
 picture: content/camera-roll/2017/04/2017-04-08-nein!/20170408_214621361_iOS.jpg
 thumbnail: content/camera-roll/2017/04/2017-04-08-nein!/20170408_214621361_iOS-thumbnail.jpg
 type: picture
+when: 2017-04-08
 tags:
   - artist unknown
   - photograph
