--- a/content/camera-roll/2017/04/2017-04-07-shit-101.md
+++ b/content/camera-roll/2017/04/2017-04-07-shit-101.md
@@ -1,10 +1,10 @@
 ---
 title: "Shit 101"
 caption: A white sticker is attached to a mailbox that has been covered in paint. The sticker says Shit 101 and has an illustration of toilet paper and a high-heel shoe.
-date: 2017-04-07
 picture: content/camera-roll/2017/04/2017-04-07-shit-101/20170407_021948463_iOS.jpg
 thumbnail: content/camera-roll/2017/04/2017-04-07-shit-101/20170407_021948463_iOS-thumbnail.jpg
 type: picture
+when: 2017-04-07
 tags:
   - artist unknown
   - Capitol Hill
