--- a/content/camera-roll/2017/04/2017-04-16-meazel.md
+++ b/content/camera-roll/2017/04/2017-04-16-meazel.md
@@ -1,7 +1,6 @@
 ---
 title: "meazel"
 caption: A white sticker containing an abstract drawing made with a black marker. Below the drawing is unrelated sticker with the phrase Don't Blink.
-date: 2017-04-16
 picture: content/camera-roll/2017/04/2017-04-16-meazel/20170416_215655743_iOS.jpg
 related:
   - "plastered mailbox"
@@ -9,6 +8,7 @@ related:
   - Capitol Hill, Seattle (en.wikipedia.org)
 thumbnail: content/camera-roll/2017/04/2017-04-16-meazel/20170416_215655743_iOS-thumbnail.jpg
 type: picture
+when: 2017-04-16
 tags:
   - artist unknown
   - Capitol Hill
