Move reader from property because it is not rendered correctly

--- a/content/topics/people/t/tonya-pearson-yoder/2019-11-20.md
+++ b/content/topics/people/t/tonya-pearson-yoder/2019-11-20.md
@@ -2,9 +2,7 @@
 title: >-
   A 53-year-old Burlington woman who was walking along southbound Interstate 5 early Wednesday near the Bow Hill rest stop was struck and killed by two vehicles, the first of which left the scene.
 next: >-
-  State Patrol determined the debris is associated with a 2008-2010 Ford Super Duty F-250, F-350 or F-450 truck that is possibly dark in color.
-reader (requires Edge): >-
-  read://https_www.bellinghamherald.com/?url=https%3A%2F%2Fwww.bellinghamherald.com%2Fnews%2Flocal%2Farticle237578014.html
+  State Patrol determined the debris is associated with a 2008-2010 Ford Super Duty F-250, F-350 or F-450 truck that is possibly dark in color. 
 type: snippet
 url: /www.bellinghamherald.com/news/local/article237578014.html/
 warning: >-
@@ -16,3 +14,4 @@ tags:
   - Bow Hill Rest Area
   - Interstate 5
 --- 
+[Open in Reader (requires Edge)](read://https_www.bellinghamherald.com/?url=https%3A%2F%2Fwww.bellinghamherald.com%2Fnews%2Flocal%2Farticle237578014.html)
