--- a/content/topics/people/t/tonya-pearson-yoder/2019-11-26.md
+++ b/content/topics/people/t/tonya-pearson-yoder/2019-11-26.md
@@ -3,9 +3,7 @@ title: >-
   State Patrol determined the debris is associated with a 2008-2010 Ford Super Duty F-250, F-350 or F-450 truck that is possibly dark in color.
 next: >-
   The Skagit County Coroner’s Office has completed the examination of a 53 year old female, Tonya L. Pearson of Burlington, Washington.  On 11/20/2019, Tonya Pearson was a pedestrian who was struck by a motor vehicle on I-5 south bound, mile post 207, Bow, Washington. The cause of death is multiple blunt force trauma injuries. The manner of death is accident. No further information will be released by this office.
-published: 2019-11-26
-reader (requires Edge): >-
-  read://https_www.bellinghamherald.com/?url=https%3A%2F%2Fwww.bellinghamherald.com%2Fnews%2Flocal%2Farticle237799419.html
+published: 2019-11-26 
 type: snippet
 url: /www.bellinghamherald.com/news/local/article237799419.html/
 warning: >-
@@ -16,3 +14,4 @@ tags:
   - Bow Hill Rest Area
   - Interstate 5
 ---
+[Open in Reader (requires Edge)](read://https_www.bellinghamherald.com/?url=https%3A%2F%2Fwww.bellinghamherald.com%2Fnews%2Flocal%2Farticle237799419.html)
