When snakes first appeared

--- a/content/topics/emoji/animals/reptiles/🐍.md
+++ b/content/topics/emoji/animals/reptiles/🐍.md
@@ -4,6 +4,7 @@ name: "snake"
 related:
   - 🐊
   - 🦎
+  - "There is fossil evidence to suggest that snakes may have evolved from burrowing lizards, during the Cretaceous Period."
 type: emoji
 url: /🐍/
 tags:
