Fix syntax error

--- a/content/topics/people/j/john-m-pinch/obituary/4-1.md
+++ b/content/topics/people/j/john-m-pinch/obituary/4-1.md
@@ -1,5 +1,5 @@
 ---
-title: >_
+title: >-
   He was born on Feb. 8, 1920, in Farley, Iowa, son of Thomas J. and Regina B. (McKinney) Pinch.
 next: He graduated from Epworth High School.
 url: /john-m-pinch/obituary/4-1/
