Fix syntax error

--- a/content/topics/people/j/john-m-pinch/obituary/8.md
+++ b/content/topics/people/j/john-m-pinch/obituary/8.md
@@ -3,7 +3,7 @@ title: >-
   Surviving are his wife, Dorothy Pinch, of Maplewood; two children, Anna M. Quinn and Rodney J. (Barb) Pinch, both of Stillwater, Minn.; five grandchildren, Michael J. Quinn, of Hugo, Minn., Michelle A. Quinn, of Maplewood, David Pinch, of Minneapolis, Jason Pinch, of Hyde Park, N.Y., and James Pinch, of Stillwater; two great-grandchildren, Jacob Carlson and Justin Quinn, both of Maplewood; and many nieces, nephews, friends and neighbors.
 next: >-
   He was preceded in death by his parents; and two sisters, Imogene (Cliff) Weeks and Marie (Jim) Farley.
-url: url: /john-m-pinch/obituary/8/
+url: /john-m-pinch/obituary/8/
 tags:
   - John M. Pinch
 ---
