Add salary notes (need citation)

--- a/content/topics/people/k/katie-britt/2024-republican-address/36.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/36.md
@@ -3,7 +3,10 @@ title: >-
   "But let’s be honest – it’s been a minute since Joe Biden pumped gas, ran carpool, or pushed a grocery cart. Meanwhile, the rest of us see every day that our dollar doesn’t go as far."
 next: >-
   "And despite what he tells you, our communities are not safer."
-related: Joe Biden (en.wikipedia.org)
+related:
+  - Joe Biden (en.wikipedia.org)
+  - The 2024 salary for a U.S. senator is $174,000.
+  - The 2024 salary for a U.S. president is $400,000.
 url: /2024-republican-address/36/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
