--- a/content/topics/weather/hurricane-katrina/nws-bulletin/01.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/01.md
@@ -4,6 +4,7 @@ excerpt: >-
   URGENT — WEATHER MESSAGE NATIONAL WEATHER SERVICE NEW ORLEANS LA 1011 AM CDT SUN AUG 28, 2005
 next: >-
   URGENT — WEATHER MESSAGE NATIONAL WEATHER SERVICE NEW ORLEANS LA 1011 AM CDT SUN AUG 28, 2005
+url: /hurricane-katrina-bulletin/1/
 tags:
   - National Weather Service
   - Hurrican Katrina
