--- a/content/topics/weather/hurricane-katrina/nws-bulletin/02.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/02.md
@@ -4,6 +4,7 @@ title: >-
 next: "...DEVASTATING DAMAGE EXPECTED..."
 related:
   - Hurricane Katrina (en.wikipedia.org)
+url: /hurricane-katrina-bulletin/2/
 when: 2005-08-28
 tags:
   - Hurricane Katrina
