--- a/content/topics/weather/hurricane-katrina/nws-bulletin/03.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/03.md
@@ -2,4 +2,5 @@
 title: "...DEVASTATING DAMAGE EXPECTED..."
 next: >-
   HURRICANE KATRINA...A MOST POWERFUL HURRICANE WITH UNPRECEDENTED STRENGTH... RIVALING THE INTENSITY OF HURRICANE CAMILLE OF 1969.
+url: /hurricane-katrina-bulletin/3/
 ---
