--- a/content/topics/weather/hurricane-katrina/nws-bulletin/04.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/04.md
@@ -3,6 +3,7 @@ title: >-
   HURRICANE KATRINA...A MOST POWERFUL HURRICANE WITH UNPRECEDENTED STRENGTH... RIVALING THE INTENSITY OF HURRICANE CAMILLE OF 1969.
 next: >-
   MOST OF THE AREA WILL BE UNINHABITABLE FOR WEEKS...PERHAPS LONGER. AT LEAST ONE HALF OF WELL CONSTRUCTED HOMES WILL HAVE ROOF AND WALL FAILURE. ALL GABLED ROOFS WILL FAIL...LEAVING THOSE HOMES SEVERELY DAMAGED OR DESTROYED.
+url: /hurricane-katrina-bulletin/4/
 tags:
   - Hurricane Katrina
   - Hurricane Camille
