--- a/content/topics/weather/hurricane-katrina/nws-bulletin/05.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/05.md
@@ -5,6 +5,7 @@ next: >-
   THE MAJORITY OF INDUSTRIAL BUILDINGS WILL BECOME NON FUNCTIONAL. PARTIAL TO COMPLETE WALL AND ROOF FAILURE IS EXPECTED. ALL WOOD FRAMED LOW RISING APARTMENT BUILDINGS WILL BE DESTROYED. CONCRETE BLOCK LOW RISE APARTMENTS WILL SUSTAIN MAJOR DAMAGE...INCLUDING SOME WALL AND ROOF FAILURE.
 TODO:
   - Compare the NWS predictions with actual impact.
+url: /hurricane-katrina-bulletin/5/
 tags:
   - TODO
 ---
