--- a/content/topics/weather/hurricane-katrina/nws-bulletin/06.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/06.md
@@ -3,6 +3,7 @@ title: >-
   THE MAJORITY OF INDUSTRIAL BUILDINGS WILL BECOME NON FUNCTIONAL. PARTIAL TO COMPLETE WALL AND ROOF FAILURE IS EXPECTED. ALL WOOD FRAMED LOW RISING APARTMENT BUILDINGS WILL BE DESTROYED. CONCRETE BLOCK LOW RISE APARTMENTS WILL SUSTAIN MAJOR DAMAGE...INCLUDING SOME WALL AND ROOF FAILURE.
 next: >-
   HIGH RISE OFFICE AND APARTMENT BUILDINGS WILL SWAY DANGEROUSLY...A FEW TO THE POINT OF TOTAL COLLAPSE. ALL WINDOWS WILL BLOW OUT.
+url: /hurricane-katrina-bulletin/6/
 tags:
   - building
 ---
