--- a/content/topics/weather/hurricane-katrina/nws-bulletin/09.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/09.md
@@ -3,6 +3,7 @@ title: >-
   POWER OUTAGES WILL LAST FOR WEEKS...AS MOST POWER POLES WILL BE DOWN AND TRANSFORMERS DESTROYED. WATER SHORTAGES WILL MAKE HUMAN SUFFERING INCREDIBLE BY MODERN STANDARDS.
 next: >-
   THE VAST MAJORITY OF NATIVE TREES WILL BE SNAPPED OR UPROOTED. ONLY THE HEARTIEST WILL REMAIN STANDING...BUT BE TOTALLY DEFOLIATED. FEW CROPS WILL REMAIN. LIVESTOCK LEFT EXPOSED TO THE WINDS WILL BE KILLED.
+url: url: /hurricane-katrina-bulletin/9/
 tags:
   - water
 ---
