--- a/content/topics/weather/hurricane-katrina/nws-bulletin/11.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/11.md
@@ -3,4 +3,5 @@ title: >-
   AN INLAND HURRICANE WIND WARNING IS ISSUED WHEN SUSTAINED WINDS NEAR HURRICANE FORCE...OR FREQUENT GUSTS AT OR ABOVE HURRICANE FORCE...ARE CERTAIN WITHIN THE NEXT 12 TO 24 HOURS.
 next: >-
   ONCE TROPICAL STORM AND HURRICANE FORCE WINDS ONSET...DO NOT VENTURE OUTSIDE!
+url: url: /hurricane-katrina-bulletin/11/
 ---
