--- a/content/topics/weather/hurricane-katrina/nws-bulletin/12.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/12.md
@@ -1,4 +1,5 @@
 ---
 title: ONCE TROPICAL STORM AND HURRICANE FORCE WINDS ONSET...DO NOT VENTURE OUTSIDE!
 next: WWUS74 KLIX 281550 NPWLIX
+url: /hurricane-katrina-bulletin/12/
 ---
