--- a/content/topics/weather/hurricane-katrina/nws-bulletin/01.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/01.md
@@ -4,8 +4,10 @@ excerpt: >-
   URGENT — WEATHER MESSAGE NATIONAL WEATHER SERVICE NEW ORLEANS LA 1011 AM CDT SUN AUG 28, 2005
 next: >-
   URGENT — WEATHER MESSAGE NATIONAL WEATHER SERVICE NEW ORLEANS LA 1011 AM CDT SUN AUG 28, 2005
+TODO: format text as bulletin
 url: /hurricane-katrina-bulletin/1/
 tags:
   - National Weather Service
   - Hurrican Katrina
+  - TODO
 ---
