--- a/content/topics/weather/hurricane-katrina/nws-bulletin/07.md
+++ b/content/topics/weather/hurricane-katrina/nws-bulletin/07.md
@@ -3,5 +3,5 @@ title: >-
   HIGH RISE OFFICE AND APARTMENT BUILDINGS WILL SWAY DANGEROUSLY...A FEW TO THE POINT OF TOTAL COLLAPSE. ALL WINDOWS WILL BLOW OUT.
 next: >-
   AIRBORNE DEBRIS WILL BE WIDESPREAD...AND MAY INCLUDE HEAVY ITEMS SUCH AS HOUSEHOLD APPLIANCES AND EVEN LIGHT VEHICLES. SPORT UTILITY VEHICLES AND LIGHT TRUCKS WILL BE MOVED. THE BLOWN DEBRIS WILL CREATE ADDITIONAL DESTRUCTION. PERSONS...PETS...AND LIVESTOCK EXPOSED TO THE WINDS WILL FACE CERTAIN DEATH IF STRUCK.
-url: url: /hurricane-katrina-bulletin/7/
+url: /hurricane-katrina-bulletin/7/
 ---
