Joint Comprehensive Plan of Action (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/42.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/42.md
@@ -5,7 +5,7 @@ next: >-
   "We’ve become a nation in retreat. And the enemies of freedom see an opportunity."
 related:
   - Afghanistan (en.wikipedia.org)
-  - Iran (en.wikipedia.org)
+  - Joint Comprehensive Plan of Action (en.wikipedia.org)
 url: /2024-republican-address/42/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
