--- a/content/topics/people/k/katie-britt/2024-republican-address/45.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/45.md
@@ -5,6 +5,7 @@ next: >-
   "Meanwhile, the Chinese Communist Party is undercutting America’s workers. China is buying up our farmland, spying on our military installations, and spreading propaganda through the likes of TikTok."
 related:
   - Iran (en.wikipedia.org)
+  - Red Sea crisis (en.wikipedia.org)
 url: /2024-republican-address/45/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
