--- a/content/topics/people/k/katie-britt/2024-republican-address/12.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/12.md
@@ -10,4 +10,5 @@ related:
 url: /2024-republican-address/12/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
+  - Enterprise, Alabama
 ---
