--- a/content/screenshots/2024-05-31/2024-05-31 (10).png.md
+++ b/content/screenshots/2024-05-31/2024-05-31 (10).png.md
@@ -3,7 +3,7 @@ title: "2024-05-31 (10).png"
 archive: https://web.archive.org/web/20240531105319/https://wiki.xxiivv.com/site/webring.html
 license: >-
   The underlying website is [licensed under CC BY-NC-SA 4.0](https://wiki.xxiivv.com/site/about.html) and therefore any screenshots are licensed as the same. To view the license itself, see https://creativecommons.org/licenses/by-nc-sa/4.0/.   
-2024-05-31 (11).png
+next: 2024-05-31 (11).png
 picture: "content/screenshots/2024-05-31/2024-05-31 (10).png"
 an interesting site found through hacker news:
   - https://news.ycombinator.com/item?id=40514764
